--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
 <h1>Persona</h1>
 <img src="img/IMGP2528.jpg">
 <ul>
